[package]
name = "rugui_emulator"
version = "0.1.0"
authors = ["Alexander Sergeev <etc9053@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
eframe = "0.15.0" # Gives us egui, epi and web+native backends
rugui = { path = "../rugui" }
serde = { version = "1", features = ["derive"], optional = true }
copypasta = "0.7.1"

[features]
default = []
persistence = ["eframe/persistence", "serde"] # Enable if you want to persist app state on shutdown

[profile.release]
opt-level = 2 # fast and small wasm

[patch.crates-io]

# If you want to use the bleeding edge version of `egui`:
# eframe = { git = "https://github.com/emilk/egui", branch = "master" }

# If you fork https://github.com/emilk/egui you can test with:
# eframe = { path = "../egui/eframe" }
